@@ -1,3 +1,9 @@
+Tue Aug 28 01:49:27 2001  George Lebl <jirka@5z.com>
+
+	* gnome-gconf.[ch]: For program relative path, take an optional
+	  argument of GnomeProgram.  Also add documentation for these
+	  two.
+
 Mon Aug 27 00:55:56 2001  George Lebl <jirka@5z.com>
 
 	* gnome-config.c, parse-path.cP: use an internal version of
